--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_EditLink.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_EditLink.cshtml
@@ -1,5 +1,4 @@
-﻿@using SFA.Apprenticeships.Web.Recruit.ViewModels
-@model EditLinkViewModel
+﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.EditLinkViewModel
     
 @{
     var linkText = Model.CommentViewModel.HasComment ? "Edit/View feedback" : "Edit";
