--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
@@ -1,9 +1,9 @@
 ﻿@model VacancyViewModel
 @using SFA.Apprenticeships.Domain.Entities.Vacancies.ProviderVacancies
 @using SFA.Apprenticeships.Web.Raa.Common.Constants
+@using SFA.Apprenticeships.Web.Raa.Common.Extensions
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
 @using SFA.Apprenticeships.Web.Recruit.Constants
-@using SFA.Apprenticeships.Web.Recruit.Extensions
 @using SFA.Apprenticeships.Web.Recruit.ViewModels
 @{
     ViewBag.Title = "Recruit an Apprentice - Preview vacancy";
@@ -68,7 +68,7 @@
                     <p id="vacancy-working-week" itemprop="workHours">
                         @Model.VacancySummaryViewModel.WorkingWeek<br />Total hours per week: @Model.VacancySummaryViewModel.HoursPerWeek
                         @if (Model.VacancySummaryViewModel.HoursPerWeek > 40)
-                    {
+                        {
                             <br />@:(the hours are based on the candidate being over 18)
                         }
                     </p>
@@ -80,13 +80,13 @@
                         @if (Model.VacancySummaryViewModel.WageType == WageType.Custom)
                         {
                             <span>@Model.VacancySummaryViewModel.WageUnitDisplayText wage
-                                @Html.Partial(CommentViewModel.PartialView, Html.GetCommentViewModel(m => m.VacancySummaryViewModel.WageType, Model.VacancySummaryViewModel.WageComment, summaryLink))
+                                @Html.Partial(ValidationResultViewModel.PartialView, Html.GetValidationResultViewModelFor(m => m.VacancySummaryViewModel.Wage, ViewData.ModelState, summaryLink, Model.VacancySummaryViewModel.WageComment))
                             </span>
                         }
                         else
                         {
                             <span>Wage 
-                                @Html.Partial(CommentViewModel.PartialView, Html.GetCommentViewModel(m => m.VacancySummaryViewModel.WageType, Model.VacancySummaryViewModel.WageComment, summaryLink))
+                                @Html.Partial(ValidationResultViewModel.PartialView, Html.GetValidationResultViewModelFor(m => m.VacancySummaryViewModel.Wage, ViewData.ModelState, summaryLink, Model.VacancySummaryViewModel.WageComment))
                             </span>
                         }
                     </h3>
