--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
@@ -46,9 +46,12 @@
         </div>
         <div class="grid grid-1-3">
             <div class="editable-item">
-                <p id="vacancy-closing-date">
-                    Closing date: @Model.VacancySummaryViewModel.ClosingDate.Date.ToFriendlyClosingToday()
+                <h3 class="bold-small">
+                    Closing date
                     @Html.Partial(ValidationResultViewModel.PartialView, Html.GetValidationResultViewModelFor(m => m.VacancySummaryViewModel.ClosingDate, ViewData.ModelState, summaryLink, Model.VacancySummaryViewModel.ClosingDateComment))
+                </h3>
+                <p id="vacancy-closing-date">
+                    @Model.VacancySummaryViewModel.ClosingDate.Date.ToFriendlyClosingToday()
                 </p>
                 @Html.Partial(EditLinkViewModel.PartialView, Html.GetEditLinkViewModel(m => m.VacancySummaryViewModel.ClosingDate, summaryLink, Model.VacancySummaryViewModel.ClosingDateComment))
             </div>
