save and return to preview for vacancy posting journey

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
@@ -13,6 +13,16 @@
 
     var frameworksSelected = Model.TrainingType == TrainingType.Frameworks ? selected : null;
     var standardsSelected = Model.TrainingType == TrainingType.Standards ? selected : null;
+
+    var saveButtonText = "Save and continue";
+    var saveButtonValue = "CreateVacancy";
+
+    if (Model.Status == ProviderVacancyStatuses.RejectedByQA)
+    {
+        saveButtonText = "Save and return to Preview";
+        saveButtonValue = "CreateVacancyAndPreview";
+    }
+
 }
 
 <h1 class="heading-xlarge">
@@ -155,7 +165,7 @@
     @Html.HiddenFor(model => model.VacancyGuid)
 
     <div class="form-group">
-        <button type="submit" class="button" name="CreateVacancy" value="CreateVacancy">Save and continue</button>
+        <button id="createVacancyButton" type="submit" class="button" name="CreateVacancy" value="@saveButtonValue">@saveButtonText</button>
         <button id="createVacancyAndExit" type="submit" class="button-link" name="CreateVacancy" value="CreateVacancyAndExit">Save and exit</button>
     </div>
 }
