--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySummary.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySummary.cshtml
@@ -6,6 +6,15 @@
 @using SFA.Apprenticeships.Web.Raa.Common.Constants.ViewModels
 @{
     ViewBag.Title = "Recruit an Apprentice - Enter vacancy summary";
+
+    var saveButtonText = "Save and continue";
+    var saveButtonValue = "VacancySummary";
+
+    if (Model.Status == ProviderVacancyStatuses.RejectedByQA)
+    {
+        saveButtonText = "Save and return to Preview";
+        saveButtonValue = "VacancySummaryAndPreview";
+    }
 }
 
 <h1 class="heading-xlarge">
@@ -94,7 +103,7 @@
         </div>
     </section>
     <div class="grid grid-1-2">
-        <button type="submit" class="button" name="VacancySummary" value="VacancySummary">Save and continue</button>
+        <button id="vacancySummaryButton" type="submit" class="button" name="VacancySummary" value="@saveButtonValue">@saveButtonText</button>
         <button id="vacancySummaryAndExit" type="submit" class="button-link" name="VacancySummary" value="VacancySummaryAndExit">Save and exit</button>
     </div>
 }
